--- a/src/app/components/product-display/product-display.component.html
+++ b/src/app/components/product-display/product-display.component.html
@@ -1,1 +1,1 @@
-<app-product-carousel></app-product-carousel>
+<app-product-carousel [MediaList]="productData?.types[selectedTypeIndex]?.mediaList"></app-product-carousel>
