--- a/src/app/components/product-carousel/product-carousel.component.html
+++ b/src/app/components/product-carousel/product-carousel.component.html
@@ -1,18 +1,26 @@
 <ng-template #productItem
     let-product="product"
     let-index="index">
-    <div class="product-item">
-        <img class="product-item-image" [src]="product?.imageURL">
+    <div *ngIf="product != null" class="product-item">
+        <img class="product-item-image" [src]="baseImageURL + product?.imageURL">
     </div>
 </ng-template>
 
 <div class="product-carousel-container">
-    <ng-container *ngFor="let product of testImageList; let i = index"
-        [ngTemplateOutlet]="productItem"
-        [ngTemplateOutletContext]="{
-            product: product,
-            index: i
-        }">
-    </ng-container>
+    <div class="product-item-container">
+        <ng-container *ngFor="let product of mediaList; let i = index"
+            [ngTemplateOutlet]="productItem"
+            [ngTemplateOutletContext]="{
+                product: product,
+                index: i
+            }">
+        </ng-container>
+    </div>
+    <div class="product-button-previous" (click)="previousProduct()">
+        <fa-icon [icon]="faChevronLeft"></fa-icon>
+    </div>
+    <div class="product-button-next" (click)="nextProduct()">
+        <fa-icon [icon]="faChevronRight"></fa-icon>
+    </div>
 </div>
 
