--- a/src/app/components/product-carousel/product-carousel.component.scss
+++ b/src/app/components/product-carousel/product-carousel.component.scss
@@ -1,11 +1,67 @@
 .product-carousel-container {
-    .product-item {
-        display: inline-block;
+    position: relative;
+    overflow: hidden;
 
-        .product-item-image {
-            width: 3.6875rem;
-            height: 5.625rem;
+    .product-item-container {
+        display: flex;
+        position: relative;
+        width: 100%;
+        height: 100%;
+        margin: auto;
 
+        .product-item {
+            position: relative;
+            display: none;
+            width: 425px;
+            height: 100%;
+            -webkit-animation-name: fade;
+            -webkit-animation-duration: 1.5s;
+            animation-name: fade;
+            animation-duration: 1.5s;
+
+
+            &.active {
+                display: flex;
+            }
+
+            &.next {
+                display: flex;
+            }
+
+            .product-item-image {
+                height: auto;
+                max-width: 100%;
+
+            }
         }
+
+        @-webkit-keyframes fade {
+            from {opacity: .4}
+            to {opacity: 1}
+        }
+        
+        @keyframes fade {
+            from {opacity: .4}
+            to {opacity: 1}
+        }
+          
+    }
+    .product-button-previous, .product-button-next {
+        display: flex;
+        position: absolute;
+        top: 50%;
+        cursor: pointer;
+        z-index: 5;
+        align-items: center;
+        justify-content: center;
+        transition: 0.6s ease;
+    }
+
+    .product-button-previous {
+        left: 10px;
+    }
+
+    .product-button-next {
+        right: 10px;
     }
 }
