implement size-selector component

--- a/src/app/components/product-display/product-display.component.html
+++ b/src/app/components/product-display/product-display.component.html
@@ -1,1 +1,2 @@
 <app-product-carousel [MediaList]="productData?.types[selectedTypeIndex]?.mediaList"></app-product-carousel>
+<app-size-selector [SizeInfoList]="productData?.types[selectedTypeIndex]?.sizeList"></app-size-selector>
