implement product-type-selector component

--- a/src/app/components/product-display/product-display.component.html
+++ b/src/app/components/product-display/product-display.component.html
@@ -1,2 +1,3 @@
 <app-product-carousel [MediaList]="productData?.types[selectedTypeIndex]?.mediaList"></app-product-carousel>
+<app-product-type-selector [ProductTypeList]="productData?.types"></app-product-type-selector>
 <app-size-selector [SizeInfoList]="productData?.types[selectedTypeIndex]?.sizeList"></app-size-selector>
