--- a/src/app/components/product-display/product-display.component.scss
+++ b/src/app/components/product-display/product-display.component.scss
@@ -66,7 +66,56 @@
             font-size: 1.0625rem;
             line-height: normal;
             letter-spacing: normal;
-        
+        }
+
+        .payment-info {
+            font-size: .8125rem;
+            letter-spacing: .16px;
+            color: #8c8c8c;
+            font-family: 'Jost',sans-serif;
+            margin-bottom: 12px;
+        }
+
+        .product-actions {
+            margin-top: 10px;
+            
+            .add-to-bag-button {
+                display: flex;
+                text-align: center;
+                margin-right: -15px;
+                margin-left: -15px;
+
+                .add-button {
+                    height: 3rem;
+                    width: 100%;
+                    border: 0;
+                    margin: 0;
+                    padding: .9375rem;
+                    font-size: .8125rem;
+                    font-family: 'Jost',sans-serif;
+                    font-weight: 600;
+                    text-transform: uppercase;
+                    letter-spacing: .0625rem;
+                    background-color:#000;
+                    color: #fff;
+                }
+            }
+
+            .add-to-wishlist-button {
+                display: flex;
+                cursor: pointer;
+                z-index: 5;
+                align-items: center;
+                justify-content: center;
+                padding: 0;
+                border: 0;
+                height: 3.125rem;
+                margin-top: -5px;
+
+                .ng-fa-icon {
+                    font-size: 2.125rem;
+                }
+            }
         }
     }
 }
